# cli-code-exercises

./: .gitignore  pyproject.toml
cli/: pyproject.toml
cli/cli_code_exercises/: main.py  utils.py
code-exercises/: main.py
server/: pyproject.toml
server/code_exercises_server/: main.py  utils.py
server/code_exercises_server/exercises/0/: 1.py
server/exercise_tests/0/: 1_develop_test.py  1_submit_test.py
