[tool.poetry]
name = "code-exercises-server"
version = "0.1.0"
description = ""
authors = ["Jonathan Breidfjord <jbreidfjord@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.0"
uvicorn = { extras = ["standard"], version = "^0.18.2" }
python-multipart = "^0.0.5"
pytest-reportlog = "^0.1.2"
pytest = "^5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
